k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-hello
  name: angular-hello
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: angular-hello
